[project]
name = "agno-learning"
version = "0.1.0"
description = "I am learning agno and this repository will be the record of what I learn"
authors = [
    {name = "Devansh",email = "devansh.arctikcircle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "agno (>=1.7.6,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "lancedb (>=0.24.2,<0.25.0)",
    "tantivy (>=0.24.0,<0.25.0)",
    "pylance (>=0.32.0,<0.33.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "ddgs (>=9.4.3,<10.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
